--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
         <footer>
             <div class="footer">
-              <a href="https://github.com/TylerPalko/gamehub">Source Code</a>
+              <a href="https://github.com/TylerPalko/gamehub"> </a>
               &nbsp;
               <a href="https://pickle.gq"><img src="resources/Pickle_rick.webp" width="15" height="auto"></a>
               &nbsp;
